--- a/demo/demo/pom.xml
+++ b/demo/demo/pom.xml
@@ -45,6 +45,11 @@
 			<version>8.0.32</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
